--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration.xml
@@ -14,15 +14,15 @@
 			<editLanguage>Language has been updated to: {0}</editLanguage>
 			<editContent>Content has been updated.</editContent>
 			<editFile>File has been updated.</editFile>
-			<singleSource>Source is {0}.</singleSource>
-      <multiSource>Sources are {0}.</multiSource>
+			<singleSource>File source is {0}.</singleSource>
+      <multiSource>File sources are {0}.</multiSource>
       <updateMetadata>Metadata {0} has been updated to: {1}</updateMetadata>
       <removeMetadata>Metadata {0} has been to removed.</removeMetadata>  
 			<removeTitle>Title has been removed.</removeTitle>
       <removeSummary>Summary has been removed.</removeSummary>
       <removeDescription>Description has been removed.</removeDescription>
       <removeCreator>Creator has been removed.</removeCreator>
-      <removeSource>Source has been removed.</removeSource>
+      <removeSource>File source(s) has been removed.</removeSource>
       <removeLanguage>Language has been removed.</removeLanguage>
       <removeContent>Content has been removed.</removeContent>
 			<attachmentAdded>File(s) has been attached.</attachmentAdded>
