--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_es_ES.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_es_ES.xml
@@ -14,15 +14,15 @@
       <editFile>File has been updated.</editFile>
       <singleCreator>Creator is {0}.</singleCreator>
       <multiCreator>Creators are {0}.</multiCreator>      
-      <singleSource>Source is {0}.</singleSource>
-      <multiSource>Sources are {0}.</multiSource>      
+      <singleSource>File source is {0}.</singleSource>
+      <multiSource>File sources are {0}.</multiSource>      
       <updateMetadata>Metadata {0} has been updated to: {1}</updateMetadata>
       
       <removeTitle>Title has been removed.</removeTitle>
       <removeSummary>Summary has been removed.</removeSummary>
       <removeDescription>Description has been removed.</removeDescription>
       <removeCreator>Creator has been removed.</removeCreator>
-      <removeSource>Source has been removed.</removeSource>
+      <removeSource>File source(s) has been removed.</removeSource>
       <removeContent>Content has been removed.</removeContent>
       <removeLanguage>Language has been removed.</removeLanguage>
       
