--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_es_ES.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_es_ES.xml
@@ -7,6 +7,7 @@
       <system>el sistema</system>
       <readmore>...Leer más.</readmore>
       <editTitle>Title has been updated to: {0}</editTitle>
+      <editFileTitle>Name has been updated to: {0}</editFileTitle>
       <editDescription>Description has been updated to: {0}</editDescription>      
       <editSummary>Summary has been updated to: {0}</editSummary>
       <editLanguage>Language has been updated to: {0}</editLanguage>
@@ -16,8 +17,9 @@
       <multiCreator>Creators are {0}.</multiCreator>      
       <singleSource>File source is {0}.</singleSource>
       <multiSource>File sources are {0}.</multiSource>      
-      <updateMetadata>Metadata {0} has been updated to: {1}</updateMetadata>
-      
+      <updateMetadata>Metadata {0} has been updated to: {1}</updateMetadata>      
+      <removeName>Name has been removed.</removeName>
+      <removeMetadata>Metadata {} has been removed.</removeMetadata>
       <removeTitle>Title has been removed.</removeTitle>
       <removeSummary>Summary has been removed.</removeSummary>
       <removeDescription>Description has been removed.</removeDescription>
