ECMS-4509 Activity-type in Content ECMS - Update the case of empty data

--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration.xml
@@ -15,7 +15,10 @@
 			<editLanguage>Language has been updated to: {0}</editLanguage>
 			<editContent>Content has been updated.</editContent>
 			<editFile>File has been updated.</editFile>
-			<singleSource>File source is {0}.</singleSource>
+      <emptyTitle>The title has been removed.</emptyTitle>
+      <emptySummary>The summary has been removed.</emptySummary>
+      <emptyContent>The content has been removed.</emptyContent>
+      <singleSource>File source is {0}.</singleSource>
       <multiSource>File sources are {0}.</multiSource>
       <updateMetadata>Metadata {0} has been updated to: {1}</updateMetadata>
       <removeMetadata>Metadata {0} has been to removed.</removeMetadata>  
