--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_fr.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_fr.xml
@@ -11,6 +11,9 @@
       <editDescription>La description a été mise à jour: {0}</editDescription>
       <singleCreator>Le créateur est {0}</singleCreator>
       <multiCreator>Les Créateurs sont {0}</multiCreator>
+      <emptyTitle> Le titre a été supprimé.</emptyTitle>
+      <emptySummary>Le sommaire a été supprimé.</emptySummary>
+      <emptyContent>Le contenu a été supprimé.</emptyContent>
       <singleSource>la source est {0}.</singleSource>
       <multiSource>Les sources sont {0}.</multiSource>
       <updateMetadata>La Metadonnée {0} a été mis à jour par: {1}</updateMetadata>
