--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_pt_BR.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_pt_BR.xml
@@ -11,6 +11,9 @@
       <editDescription>Description has been updated to: {0}</editDescription>
       <singleCreator>Creator is {0}</singleCreator>
       <multiCreator>Creators are {0}</multiCreator>
+      <emptyTitle>The title has been removed.</emptyTitle>
+      <emptySummary>The summary has been removed.</emptySummary>
+      <emptyContent>The content has been removed.</emptyContent>
       <singleSource>File source is {0}.</singleSource>
       <multiSource>File sources are {0}.</multiSource>
       <updateMetadata>Metadata {0} has been updated to: {1}</updateMetadata>
