--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_vi.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_vi.xml
@@ -1,40 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <bundle>
-	<SocialIntegration>
-		<messages>
-			<createdBy>was created by</createdBy>
-			<editedBy>was edit by</editedBy>
-			<system>the system</system>
-			<readmore>...Read More.</readmore>
-			<editTitle>Title has been updated to: {0}</editTitle>
-			<editFileTitle>Name has been updated to: {0}</editFileTitle>
-			<editDescription>Description has been updated to: {0}</editDescription>
-			<singleCreator>Creator is {0}</singleCreator>
+  <SocialIntegration>
+    <messages>
+      <createdBy>was created by</createdBy>
+      <editedBy>was edited by</editedBy>
+      <system>the system</system>
+      <readmore>...Read More.</readmore>
+      <editTitle>Title has been updated to: {0}</editTitle>
+      <editFileTitle>Name has been updated to: {0}</editFileTitle>
+      <editDescription>Description has been updated to: {0}</editDescription>
+      <singleCreator>Creator is {0}</singleCreator>
       <multiCreator>Creators are {0}</multiCreator>
+      <editSummary>Summary has been updated to: {0}</editSummary>
+      <editLanguage>Language has been updated to: {0}</editLanguage>
+      <editContent>Content has been updated.</editContent>
+      <editFile>File has been updated.</editFile>
+      <emptyTitle>The title has been removed</emptyTitle>
+      <emptySummary>The summary has been removed</emptySummary>
+      <emptyContent>The content has been removed</emptyContent>
       <singleSource>File source is {0}.</singleSource>
       <multiSource>File sources are {0}.</multiSource>
       <updateMetadata>Metadata {0} has been updated to: {1}</updateMetadata>
-      <removeMetadata>Metadata {0} has been to removed.</removeMetadata>   
+      <removeMetadata>Metadata {0} has been to removed.</removeMetadata>  
       <removeTitle>Title has been removed.</removeTitle>
       <removeName>Name has been removed.</removeName>
       <removeSummary>Summary has been removed.</removeSummary>
       <removeDescription>Description has been removed.</removeDescription>
       <removeCreator>Creator has been removed.</removeCreator>
       <removeSource>File source(s) has been removed.</removeSource>
-      <removeContent>Content has been removed.</removeContent>
       <removeLanguage>Language has been removed.</removeLanguage>
-      <editSummary>Summary has been updated to: {0}</editSummary>
-      <editLanguage>Language has been updated to: {0}</editLanguage>
-      <editContent>Content has been updated.</editContent>
-      <editFile>File has been updated.</editFile>
+      <removeContent>Content has been removed.</removeContent>
       <attachmentAdded>File(s) has been attached.</attachmentAdded>
       <attachmentRemoved>File(s) has been removed.</attachmentRemoved>
       <categoryAdded>Category: {0} has been added.</categoryAdded>
       <categoryRemoved>Category: {0} has been removed.</categoryRemoved>
       <tagAdded>Tag: {0} has been added.</tagAdded>
-      <tagsAdded>Tags: {0} has been added.</tagsAdded>
+      <tagsAdded>Tags: {0} have been added.</tagsAdded>
       <tagRemoved>Tag: {0} has been removed.</tagRemoved>
-      <tagsRemoved>Tags: {0} has been removed.</tagsRemoved>
+      <tagsRemoved>Tags: {0} have been removed.</tagsRemoved>
       <stateChange>
         <pending>Publication status is now pending.</pending>
         <approved>Publication has been approved.</approved>
@@ -45,21 +48,18 @@
       <fileMoved>File has been moved to: {0}</fileMoved>
       <revisionChanged>Publication has been restored to version: {0}</revisionChanged>
       <version>Version: {0}</version>
-		</messages>
-		<publicationStates>
-			<version>Revision</version>
-			<title>Status</title>
-			<archived>Archived</archived>
-			<obsolete>Obsolete</obsolete>
-			<unpublished>Unpublished</unpublished>
-			<enrolled>Enrolled</enrolled>
-			<draft>Draft</draft>
-			<pending>Pending</pending>
-			<approved>Approved</approved>
-			<inreview>In Review</inreview>
-			<staged>Staged</staged>
-			<published>Published</published>
-			<live>Published</live>
-		</publicationStates>
-	</SocialIntegration>
+    </messages>
+    <publicationStates>
+      <archived>Archived</archived>
+      <obsolete>Obsolete</obsolete>
+      <unpublished>Unpublished</unpublished>
+      <draft>Draft</draft>
+      <pending>Pending</pending>
+      <approved>Approved</approved>
+      <inreview>In Review</inreview>
+      <staged>Staged</staged>
+      <published>Published</published>
+      <live>Published</live>
+    </publicationStates>
+  </SocialIntegration>
 </bundle>
