ECMS-4652: Set the title for DocViewer to Preview

--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_es_ES.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_es_ES.xml
@@ -63,4 +63,9 @@
       <live>Publicado</live>
     </publicationStates>
   </SocialIntegration>
+  <UIPopupWindow>
+    <title>
+      <DocViewer>Preview</DocViewer>
+    </title>
+  </UIPopupWindow>
 </bundle>
