--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_fr.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_fr.xml
@@ -62,4 +62,9 @@
       <live>Publié</live>
     </publicationStates>
   </SocialIntegration>
+  <UIPopupWindow>
+    <title>
+      <DocViewer>Prévisualiser</DocViewer>
+    </title>
+  </UIPopupWindow>
 </bundle>
