--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_pt_BR.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_pt_BR.xml
@@ -62,4 +62,9 @@
       <live>Publicado</live>
     </publicationStates>
   </SocialIntegration>
+  <UIPopupWindow>
+    <title>
+      <DocViewer>Preview</DocViewer>
+    </title>
+  </UIPopupWindow>
 </bundle>
