--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_pt_BR.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_pt_BR.xml
@@ -16,6 +16,11 @@
       <emptyContent>The content has been removed.</emptyContent>
       <singleSource>File source is {0}.</singleSource>
       <multiSource>File sources are {0}.</multiSource>
+      <addCreator>Creator {0} has been added</addCreator>
+      <addMultiCreator>Creators {0} have been added</addMultiCreator>      
+      <addSource>File source(s): {0} has been added</addSource>
+      <removeAllSource>File source(s) has been removed</removeAllSource>
+      <removeSource>File sources: {0} has been removed</removeSource>
       <updateMetadata>Metadata {0} has been updated to: {1}</updateMetadata>
       <removeMetadata>Metadata {0} has been to removed.</removeMetadata>  
       <removeTitle>Title has been removed.</removeTitle>
@@ -23,7 +28,6 @@
       <removeSummary>Summary has been removed.</removeSummary>
       <removeDescription>Description has been removed.</removeDescription>
       <removeCreator>Creator has been removed.</removeCreator>
-      <removeSource>File source(s) has been removed.</removeSource>
       <removeContent>Content has been removed.</removeContent>
       <removeLanguage>Language has been removed.</removeLanguage>
       <editSummary>Summary has been updated to: {0}</editSummary>
