--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration.xml
@@ -31,7 +31,7 @@
 			<removeName>Name has been removed.</removeName>
       <removeSummary>Summary has been removed.</removeSummary>
       <removeDescription>Description has been removed.</removeDescription>
-      <removeCreator>Creator has been removed.</removeCreator>
+      <removeCreator>Creator(s): {0} has been removed.</removeCreator>
       <removeLanguage>Language has been removed.</removeLanguage>
       <removeContent>Content has been removed.</removeContent>
 			<attachmentAdded>File(s) has been attached.</attachmentAdded>
