--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_pt_BR.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_pt_BR.xml
@@ -27,7 +27,7 @@
       <removeName>Name has been removed.</removeName>
       <removeSummary>Summary has been removed.</removeSummary>
       <removeDescription>Description has been removed.</removeDescription>
-      <removeCreator>Creator has been removed.</removeCreator>
+      <removeCreator>Creator(s): {0} has been removed.</removeCreator>
       <removeContent>Content has been removed.</removeContent>
       <removeLanguage>Language has been removed.</removeLanguage>
       <editSummary>Summary has been updated to: {0}</editSummary>
