ECMS-4658: Update the File activity after add a title to a file

--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_es_ES.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_es_ES.xml
@@ -7,7 +7,7 @@
       <system>el sistema</system>
       <readmore>...Leer más.</readmore>
       <editTitle>Title has been updated to: {0}</editTitle>
-      <editFileTitle>Name has been updated to: {0}</editFileTitle>
+      <editName>Name has been updated to: {0}</editName>
       <editDescription>Description has been updated to: {0}</editDescription>      
       <editSummary>Summary has been updated to: {0}</editSummary>
       <editLanguage>Language has been updated to: {0}</editLanguage>
