FORUM-141 | View the last Reply from Forum activity

--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_fr.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_fr.properties
@@ -3,6 +3,7 @@ ForumUIActivity.label.update-post={0} a mis \u00e0 jour le message: {1}
 ForumUIActivity.label.add-topic={0} a cr\u00e9\u00e9 une nouvelle discussion: {1}
 ForumUIActivity.label.update-topic={0} a mis \u00e0 jour la discussion: {1}
 ForumUIActivity.label.reply=R\u00e9pondre
+ForumUIActivity.label.lastReply=Voir derniere reponse
 ForumUIActivity.label.submit=Valider
 ForumUIActivity.label.view=Voir
 ForumUIActivity.msg.reply-success=Vous avez r\u00e9pondu au message: {0}
