--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_es_ES.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_es_ES.properties
@@ -3,6 +3,7 @@ ForumUIActivity.label.update-post={0} ha actualizado una publicaci\u00f3n: {1}
 ForumUIActivity.label.add-topic={0} ha publicado un nuevo {1} t\u00f3pico:
 ForumUIActivity.label.update-topic={0} ha actualizado un t\u00f3pico: {1}
 ForumUIActivity.label.reply=Contestar
+ForumUIActivity.label.lastReply=View last Reply
 ForumUIActivity.label.submit=Enviar
 ForumUIActivity.label.view=Ver
 ForumUIActivity.msg.reply-success=usted ha respondido a la publicaci\u00f3n: {0}
