--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_pt_BR.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_pt_BR.properties
@@ -3,6 +3,7 @@ ForumUIActivity.label.update-post={0} atualizou um post:{1}
 ForumUIActivity.label.add-topic={0} postou um novo t\u00f3pico:{1}
 ForumUIActivity.label.update-topic={0} atualizou um t\u00f3pico: {1}
 ForumUIActivity.label.reply=Responder
+ForumUIActivity.label.lastReply=View last Reply
 ForumUIActivity.label.submit=Enviar
 ForumUIActivity.label.view=Exibir
 ForumUIActivity.msg.reply-success=voc\u00ea respondeu ao post: {0}
