CAL-343 Acitivy type - date format updated

--- a/integ-calendar/integ-calendar-social/src/main/resources/locale/calendar/integration/integration.properties
+++ b/integ-calendar/integ-calendar-social/src/main/resources/locale/calendar/integration/integration.properties
@@ -20,7 +20,8 @@ CalendarUIActivity.label.need-action=Needs Action
 CalendarUIActivity.label.in-progress=In Progress
 CalendarUIActivity.label.complete=Complete
 CalendarUIActivity.label.cancel=Cancel
-
+CalendarUIActivity.label.allday=(all day)
+CalendarUIActivity.label.due-for=Due for
 
 CalendarUIActivity.msg.summary_updated=Summary has been updated to: {0}.
 CalendarUIActivity.msg.description_updated=Description has been updated to: {0}.
