--- a/integ-calendar/integ-calendar-social/src/main/resources/locale/calendar/integration/integration_fr.properties
+++ b/integ-calendar/integ-calendar-social/src/main/resources/locale/calendar/integration/integration_fr.properties
@@ -20,6 +20,7 @@ CalendarUIActivity.label.need-action=Action n\u00e9cessaire
 CalendarUIActivity.label.in-progress=En cours
 CalendarUIActivity.label.complete=Terminer
 CalendarUIActivity.label.cancel=Annuler
+CalendarUIActivity.label.allday=(toute la journee)
 
 
 CalendarUIActivity.msg.summary_updated=Le sommaire a \u00e9t\u00e9 mis \u00e0 jour: {0}.
