--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_pt_BR.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_pt_BR.xml
@@ -69,4 +69,11 @@
       <DocViewer>Preview</DocViewer>
     </title>
   </UIPopupWindow>
+  <ElementSet>
+    <dialog>
+      <label>       
+        <resourceType>Resource Type</resourceType>        
+      </label>
+    </dialog>
+  </ElementSet>
 </bundle>
