ECMS-4643: Display default icon of content in the Content activity

--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_fr.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_fr.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <bundle>
   <SocialIntegration>
+    <titles>
+      <fileSize>File Size</fileSize>
+    </titles>
     <messages>
       <createdBy>a été créé par</createdBy>
       <editedBy>a été édité par</editedBy>
