CAL-342 fix label of event cancelled

--- a/integ-calendar/integ-calendar-social/src/main/resources/locale/calendar/integration/integration.properties
+++ b/integ-calendar/integ-calendar-social/src/main/resources/locale/calendar/integration/integration.properties
@@ -39,7 +39,7 @@ CalendarUIActivity.msg.needs-action=Task needs action.
 CalendarUIActivity.msg.in-process=Task is in progress.
 CalendarUIActivity.msg.completed=Task has been completed.
 CalendarUIActivity.msg.canceled=Task has been cancelled.
-CalendarUIActivity.msg.repeatEvent_instance_removed=Event cancelled for {0}.
+CalendarUIActivity.msg.repeatEvent_instance_removed=Event cancelled on {0}.
 
 CalendarUIActivity.msg.daily=every day
 CalendarUIActivity.msg.every-day=every {interval} days
