--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_fr.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_fr.properties
@@ -39,10 +39,10 @@ AnswerUIActivity.label.question-add-language=[FR]Question has been added in: {0}
 AnswerUIActivity.label.question-add-attachment=[FR]Attachment(s) has been added.
 AnswerUIActivity.label.button.view=View
 AnswerUIActivity.label.noComment=Pas de Commentaire
-AnswerUIActivity.label.comment=1 Commentaire
+AnswerUIActivity.label.comment={0} Commentaire
 AnswerUIActivity.label.comments={0} Commentaires
 AnswerUIActivity.label.noAnswer=Pas de Reponse
-AnswerUIActivity.label.answer=1 Reponse
+AnswerUIActivity.label.answer={0} Reponse
 AnswerUIActivity.label.answers={0} Reponses
 
 PollUIActivity.label.update_poll=[FR]Poll has been updated.
