--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_pt_BR.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_pt_BR.properties
@@ -39,10 +39,10 @@ AnswerUIActivity.label.question-add-language=Question has been added in: {0}
 AnswerUIActivity.label.question-add-attachment=Attachment(s) has been added.
 AnswerUIActivity.label.button.view=View
 AnswerUIActivity.label.noComment=No Comment
-AnswerUIActivity.label.comment=1 Comment
+AnswerUIActivity.label.comment={0} Comment
 AnswerUIActivity.label.comments={0} Comments
 AnswerUIActivity.label.noAnswer=No Answer
-AnswerUIActivity.label.answer=1 Answer
+AnswerUIActivity.label.answer={0} Answer
 AnswerUIActivity.label.answers={0} Answers
 
 PollUIActivity.label.update_poll=Poll has been updated.
