ECMS-4509 Activity type in Content ECMS - Refine the likes & comment function after relooking

--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_es_ES.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_es_ES.xml
@@ -66,6 +66,8 @@
       <published>Publicado</published>
       <live>Publicado</live>
     </publicationStates>
+    <view>View</view>
+    <edit>Edit</edit>
   </SocialIntegration>
   <UIPopupWindow>
     <title>
