--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_pt_BR.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_pt_BR.xml
@@ -66,6 +66,8 @@
       <published>Publicado</published>
       <live>Publicado</live>
     </publicationStates>
+    <view>View</view>
+    <edit>Edit</edit>
   </SocialIntegration>
   <UIPopupWindow>
     <title>
