--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_vi.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_vi.xml
@@ -66,6 +66,8 @@
       <published>Published</published>
       <live>Published</live>
     </publicationStates>
+    <view>View</view>
+    <edit>Edit</edit>
   </SocialIntegration>
   <UIPopupWindow>
     <title>
