--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_fr.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_fr.properties
@@ -46,3 +46,5 @@ AnswerUIActivity.label.answer={0} Reponse
 AnswerUIActivity.label.answers={0} Reponses
 
 PollUIActivity.label.update_poll=[FR]Poll has been updated.
+PollUIActivity.label.vote={0} vote
+PollUIActivity.label.votes={0} votes
