--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_pt_BR.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_pt_BR.properties
@@ -46,3 +46,5 @@ AnswerUIActivity.label.answer={0} Answer
 AnswerUIActivity.label.answers={0} Answers
 
 PollUIActivity.label.update_poll=Poll has been updated.
+PollUIActivity.label.vote={0} vote
+PollUIActivity.label.votes={0} votes
