--- a/integ-search-portlet/src/main/resources/quicksearch/quicksearch_fr.properties
+++ b/integ-search-portlet/src/main/resources/quicksearch/quicksearch_fr.properties
@@ -1,1 +1,9 @@
-quicksearch.input.label=Recherche:
+quicksearch.label=Paramètres de recherche rapide
+quicksearch.resultsPerType.label=Résultats par type
+quicksearch.searchIn.label=Rechercher dans
+quicksearch.everything.label=Tout
+quicksearch.currentsite.label=Rechercher dans site actuel
+quicksearch.saveSettings.label=Sauvergarder Paramètres
+quicksearch.input.label=Rechercher:
+quicksearch.seeAll.label=Voir tous les résultats de la recherche
+quicksearch.noResults.label=Pas de résultat pour
