PLF-4797: Display "searching.." during search

--- a/integ-search-portlet/src/main/resources/quicksearch/quicksearch_en.properties
+++ b/integ-search-portlet/src/main/resources/quicksearch/quicksearch_en.properties
@@ -9,3 +9,4 @@ quicksearch.noResults.label=No result for
 quicksearch.input.label=Search:
 quicksearch.alert.saveSetting=Your setting has been saved.
 quicksearch.alert.error.saveSetting=Problem occurred when saving your setting:
+quicksearch.searching.label=searching..
